# TP_calculator

./: CMakeLists.txt  README.md
include/: calc.hpp
src/: CMakeLists.txt  calc.cpp  main.cpp
tests/: CMakeLists.txt  test_calc.cpp
